SERVER-8220: fix native function conversion